--- a/overall-app-container/overall-webapp/.settings/org.eclipse.wst.common.component
+++ b/overall-app-container/overall-webapp/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <dependent-module archiveName="overall-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/overall-common/overall-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="overall-webapp"/>
         <property name="java-output-path" value="/overall-webapp/target/classes"/>
     </wb-module>
