kotlin: example for async things with coroutines: mongodb access, reading file into json, downloading from external system

--- a/java_examples/kotlin/webflux-thymeleaf/src/main/resources/templates/index.html
+++ b/java_examples/kotlin/webflux-thymeleaf/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 	</tbody>
 </table>
 
-<h2>Movies after coroutine suspend on a Flux</h2>
+<h2>Movies from Mongo database after with coroutine suspending on a Flux</h2>
 
 <table>
 	<thead>
