kotlin spring webflux thymeleaf: code cleanup, dynamic header titles

--- a/java_examples/kotlin/webflux-thymeleaf/src/main/resources/templates/index.html
+++ b/java_examples/kotlin/webflux-thymeleaf/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 
 <p>Using template engine: <strong>Thymeleaf</strong></p>
 
-<h2>Movies from ReactiveDataDriverContextVariable - Flux must be used</h2>
+<h2>[[${firstSourceTitle}]]</h2>
 
 <table>
 	<thead>
@@ -29,7 +29,7 @@
 	</tbody>
 </table>
 
-<h2>Movies from Mongo database after with coroutine suspending on a Flux</h2>
+<h2>[[${secondSourceTitle}]]</h2>
 
 <table>
 	<thead>
